# Jax_Quadruped_ros2

./: .gitignore  Jax_config_workflow.csv  Jax_config_workflow.xls  README.md  jax_software_checklist.md  tableConvert.com_ygpkai.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/jax_description/share/jax_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/jax_servo_interfacing/lib/jax_servo_interfacing/: jax_servo_node
install/jax_servo_interfacing/share/jax_servo_interfacing/: package.ps1  package.sh  package.xml  package.zsh
jax_ws/install/: local_setup.sh  setup.sh
jax_ws/jax_servo_interfacing/: package.xml  setup.cfg  setup.py
jax_ws/jax_servo_interfacing/jax_servo_interfacing/: hardware_interface.py
jax_ws/log/: latest_build
jax_ws/src/jax_description/: setup.py
jax_ws/src/jax_description/config/: controllers.yaml
jax_ws/src/jax_description/meshes/: front_right_calf.stl  front_right_thigh.stl  front_right_thigh2.stl
jax_ws/src/jax_description/rviz/: jax.rviz
jax_ws/src/jax_description/urdf/: backup.jax.urdf.xacro  jax.urdf.xacro  jax.urdf.xacro.orig  leg.urdf.xacro
jax_ws/src/jax_interfaces/: CMakeLists.txt  package.xml
jax_ws/src/jax_interfaces/action/: Walk.action
jax_ws/src/jax_interfaces/msg/: Estop.msg  GaitCommand.msg  MotionCommand.msg  RobotState.msg
jax_ws/src/jax_interfaces/srv/: SetGait.srv
jax_ws/src/jax_servo_interfacing/: CMakeLists.txt  jax_servo_node.py  package.xml  setup.cfg  setup.py
log/: latest_build
(+22 files in other folders)
